k8s/scripts/External-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-api-svc
spec:
  ports:
    - port: 80

---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-api-svc
subsets:
  - addresses:
      - ip: 118.178.172.187
    ports:
      - port: 80


# kubectl exec rs-nodejs-22554 -- curl -H "x-requested-with: XMLHttpRequest" external-api-svc/common/systime.htm
