k8s/scripts/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  labels:
    type: basic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: ingress.jin.cn
      http:
        paths:
          - path: /
            backend:
              serviceName: svc-rest
              servicePort: 80
          - path: /log(/|$)(.*)
            backend:
              serviceName: svc-log-server
              servicePort: 80
          - path: /kv(/|$)(.*)
            backend:
              serviceName: svc-kv
              servicePort: 80
